force-app/main/default/objects/Holiday_Calendar__c/Holiday_Calendar__c.object-meta.xml
<CustomObject>
    <label>Holiday Calendar</label>
    <pluralLabel>Holiday Calendars</pluralLabel>
    <description>Holiday Calendar</description>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>