force-app/main/default/objects/Holiday_Calendar__c/fields/Holiday_Date__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date__c</fullName>
    <label>Holiday Date</label>
    <type>Date</type>
    <description>Holiday Date</description>
</CustomField>