force-app/main/default/objects/Holiday_Calendar__c/fields/Is_Working_Day_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Working_Day_Override__c</fullName>
    <label>Working Day Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Working Day Override</description>
</CustomField>